<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_success">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="edu.uw.tcss450.kgmr.phishapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_success"
        android:name="edu.uw.tcss450.kgmr.phishapp.SuccessFragment"
        android:label="fragment_success"
        tools:layout="@layout/fragment_success" />
    <fragment
        android:id="@+id/nav_blog_list"
        android:name="edu.uw.tcss450.kgmr.phishapp.BlogFragment"
        android:label="fragment_blog_list"
        tools:layout="@layout/fragment_blog_list" >
        <action
            android:id="@+id/action_nav_blog_list_to_nav_blog_post"
            app:destination="@id/nav_blog_post" />
    </fragment>
    <fragment
        android:id="@+id/nav_blog_post"
        android:name="edu.uw.tcss450.kgmr.phishapp.BlogPostFragment"
        android:label="fragment_blog_post"
        tools:layout="@layout/fragment_blog_post" />
</navigation>